# cubesats

./: .gitignore  CDHDataStructure.csv  RAP_data_decoder.py  RAPdecoder.py  README.md  ads7828.py  bme_run.py  camera.py  camera.py.save  camera.py.save.1  camera_david.py  decoder.py  eddy_pdu.py  encoder.py  full_service.py  fullsend.sh  get_bme_data.py  get_imu_data.py  get_pdu_data.py  gps.py  gps_run.py  gps_time.py  hello.txt  imu_run.py  killa.sh  mag_run.py  magnetometer.py  nmea_string_parse.py  pni_rm3100.py  powercycle.sh  rawbeacons.txt  set_rtc.py  telemetry.csv  telemetry.py  temp_test.py  temperature.py  utils.py  watchdog.py  watchdog2.py
bme_data/: recent_bme.csv
comms/: .team.jpg.icloud  CFLBeacon.csv  CFL_beacon_def.csv  SNR.py  createCamHex.py  createDataHex.py  downlinked_packets.txt  output_byte_arrays.csv  packetDecoder.py
comms/plutoradio/PlutoRadio/gr-mxlgs/lib/: CMakeLists.txt  mxlgs_ax25_packetization.cc  mxlgs_doppler_correction_cc.cc  mxlgs_evmest_cf.cc  mxlgs_rx_hierblock.cc  mxlgs_stream_to_pdu.cc  mxlgs_tx_hierblock.cc  qa_mxlgs.cc  qa_mxlgs.h  test_mxlgs.cc
comms_lab/: encoder.py
downlink_telem/: data.csv  telemetry_2023-11-07_15:06:40.csv  telemetry_2023-11-07_15:07:10.csv  telemetry_2023-11-07_15:07:42.csv  telemetry_2023-11-07_15:25:51.csv  telemetry_2023-11-07_15:26:21.csv  telemetry_2023-11-09_12:56:34.csv  telemetry_2023-11-09_12:56:35.csv  telemetry_2023-11-09_12:57:04.csv  telemetry_2023-11-09_12:57:05.csv  telemetry_2023-11-09_12:57:34.csv  telemetry_2023-11-09_12:57:35.csv  telemetry_2023-11-09_12:58:04.csv  telemetry_2023-11-09_12:58:05.csv  telemetry_2023-11-09_12:58:34.csv  telemetry_2023-11-09_12:58:35.csv  telemetry_2023-11-09_12:59:04.csv  telemetry_2023-11-09_12:59:05.csv  telemetry_2023-11-09_12:59:34.csv  telemetry_2023-11-09_12:59:35.csv  telemetry_2023-11-09_13:00:04.csv  telemetry_2023-11-09_13:00:05.csv  telemetry_2023-11-09_13:00:34.csv  telemetry_2023-11-09_13:00:35.csv  telemetry_2023-11-09_13:01:04.csv  telemetry_2023-11-09_13:01:05.csv  telemetry_2023-11-09_13:01:34.csv  telemetry_2023-11-09_13:01:35.csv  telemetry_2023-11-09_13:02:04.csv  telemetry_2023-11-09_13:02:05.csv  telemetry_2023-11-09_13:02:34.csv  telemetry_2023-11-09_13:02:35.csv  telemetry_2023-11-09_13:03:04.csv  telemetry_2023-11-09_13:03:05.csv  telemetry_2023-11-09_13:03:34.csv  telemetry_2023-11-09_13:03:35.csv  telemetry_2023-11-09_13:04:04.csv  telemetry_2023-11-09_13:04:05.csv  telemetry_2023-11-09_13:04:34.csv  telemetry_2023-11-09_13:04:35.csv  (+73 more)
gps_data/: all_gps_data_2023-11-15_08:32:00.csv  all_gps_data_2023-11-15_08:50:00.csv  all_gps_data_2023-11-15_08:54:17.csv  all_gps_data_2023-11-15_09:32:10.csv  all_gps_data_2023-11-15_09:33:16.csv  all_gps_data_2023-11-15_09:40:12.csv  all_gps_data_2023-11-15_12:46:49.csv  all_gps_data_2023-11-15_12:51:02.csv  all_gps_data_2023-11-15_12:52:47.csv  all_gps_data_2023-11-15_12:54:44.csv  all_gps_data_2023-11-15_13:02:38.csv  all_gps_data_2023-11-15_13:05:55.csv  all_gps_data_2023-11-15_13:06:25.csv  recent_gps.csv  (+18 more)
(+388 files in other folders)
